examples/test/testpolicy6381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6381
  namespace: namespace133
spec:
  podSelector:
    matchLabels:
      key16: value14
      key1: value20
      key11: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value15
          key37: value12
      podSelector:
        matchLabels:
          key18: value33
